# project_cs128h

./: Cargo.toml  README.md  RUN.md
src/: authentication.rs  friends.rs  friends_routes.rs  group_chat.rs  group_message.rs  homepage.rs  lib.rs  loginSignupCli.rs  login_signup_cli.rs  main.rs  message_cli.rs  new_group_chat.rs
src/clear_console/: clear_console.rs  mod.rs
src/friends_cli/: friends.rs  friends_routes.rs  mod.rs
src/friends_cli/friends/: message_cli.rs
src/group_chats_cli/: group_chat_messages.rs  group_chats.rs  group_chats_routes.rs  mod.rs  new_group_chat.rs
src/login_signup_cli/: authentication.rs  login_and_signup.rs
src/messages_cli/: messages.rs  messages_routes.rs  mod.rs
