[package]
name = "project_cs128h"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
bcrypt = "0.12.0"
dialoguer = "0.11.0"
email_address = "0.2.9"
python-input = "0.8.0"
chrono = "0.4.38"
winit = "0.30.5"

[dependencies.mongodb]
version = "3.1.0"
